component commands - refactoring DirectComponent